# cjsondiff

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.hypothesis/constants/: 05a1ad0c8fcce5dc  47ee6bc005479d95
cjsondiff/: __init__.py  cli.py
fastjsondiff/: cli.py  jsondiff.py
src/: module.cpp
tests/: test_benchmark.py  test_jsondiff.py
